--- a/paper.tex
+++ b/paper.tex
@@ -47,7 +47,7 @@
 \begin{document}
 
 \title{Water in the Cloud: Understanding Water Chemistry via the
-Internet of Things\thanks{This paper builds on the earlier published work,
+Internet of Things\thanks{This paper builds on the previously published work,
 Roger D. Chamberlain, Mike Chambers, Darren Greenwalt, Brett Steinbrueck,
 and Todd Steinbrueck, ``Water in the Cloud: Remote Understanding of Water
 Chemistry: Poster Abstract,'' in Proc.~of ACM/IEEE 2nd International
@@ -60,36 +60,35 @@ April 2017, pp. 353-354. DOI: 10.1145/3054977.3057327}
 
 \author{Roger D. Chamberlain
 \and
- Mike Chambers
+ Mike~Chambers
 \and
- Darren Greenwalt
+ Darren~Greenwalt
 \and
- Brett Steinbrueck
+ Brett~Steinbrueck
 \and
- Todd Steinbrueck
+ Todd~Steinbrueck
 }
 
 \authorrunning{R.D. Chamberlain et al.} % if too long for running head
 
 \institute{R.D. Chamberlain \at
-              Washington University in St. Louis \\
+              Washington University in St. Louis %\\
               and BECS Technology, Inc., St. Louis, MO USA \\
               \email{roger@wustl.edu}
            \and
+           M. Chambers $\cdot$ D. Greewalt $\cdot$ B. Steinbrueck $\cdot$ T. Steinbrueck \at
+              BECS Technology, Inc., St. Louis, MO USA
+           \and
            M. Chambers \at
-              BECS Technology, Inc., St. Louis, MO USA \\
               \email{mike\_c@becs.com}
            \and
            D. Greenwalt \at
-              BECS Technology, Inc., St. Louis, MO USA \\
               \email{darren@becs.com}
            \and
            B. Steinbrueck \at
-              BECS Technology, Inc., St. Louis, MO USA \\
               \email{brett@becs.com}
            \and
            T. Steinbrueck \at
-              BECS Technology, Inc., St. Louis, MO USA \\
               \email{todd@becs.com}
 }
 
