--- a/conclude.tex
+++ b/conclude.tex
@@ -1,4 +1,4 @@
-\section{Conclusions}
+\section{Conclusions and Future Work}
 \label{sec:conclude}
 
 EZAnalytics provides an operational ability to collect water chemistry
@@ -6,6 +6,11 @@ data from a collection of control equipment.  This data collection
 is secure, and supports multiple levels of data analysis.
 The initial deployment provides summary data to equipment owners/operators
 about the water chemistry under their direct control.
+This has direct implications for inventory management as well as
+reduction in maintenance expenses.
+
 The promise, however, is potentially substantially more beneficial.  We will
 be able to use data from multiple installations to learn broad truths
 about water chemistry control that can be shared across the industry.
+This will result in lower chemical usage, fewer erroneous or alarm
+conditions, and overall better control over water chemistry.
