--- a/paper.bib
+++ b/paper.bib
@@ -850,16 +850,6 @@ ISSN={0098-5589},
 month=May
 }
 
-@article{gefen2000relative,
-  title={The relative importance of perceived ease of use in {IS} adoption: a study of e-commerce adoption},
-  author={Gefen, David and Straub, Detmar W},
-  journal={Journal of the Association for Information Systems},
-  volume={1},
-  number={1},
-  pages={8},
-  year={2000}
-}
-
 @article{hertzum2004usable,
   title={Usable security and e-banking: Ease of use vis-a-vis security},
   author={Hertzum, Morten and J{\o}rgensen, Niels and N{\o}rgaard, Mie},
@@ -1126,4 +1116,28 @@ month = apr,
 year = 2008,
 pages = {614-629},
 doi = {10.1016/j.ijpe.2007.05.010}
+}
+
+@article{Davis89,
+author = {Fred D. Davis},
+title = {Perceived Usefulness, Perceived Ease of Use, and User
+Acceptance of Information Technology},
+journal = {MIS Quarterly},
+volume = 13,
+number = 3,
+month = sep,
+year = 1989,
+pages = {319-340},
+doi = {10.2307/249008}
+}
+
+@article{McP13,
+author = {Lori McPherson},
+title = {Understanding Proportional Control},
+journal = {Industrial WaterWorld},
+volume = 13,
+number = 1,
+month = feb,
+year = 2013,
+url = {https://www.waterworld.com/articles/iww/print/volume-13/issue-1.html}
 }
