revised to include Todd's comments

--- a/analytics.tex
+++ b/analytics.tex
@@ -42,11 +42,11 @@ will come from the data aggregation described above.
 
 The first example of commercial impact is on inventory monitoring
 and resupply. It is frequently the case that chemical inventories
-are monitored by the controllers, while can straightforwardly enable
+are monitored by the controllers, which can straightforwardly enable
 automated re-ordering of chemical as well as scheduling of delivery.
 Not only does this reduce the manual workload associated with
 inventory control, it also reduces cases of inadvertent supply outages
-which can result in erroneous water chemistry.
+which can result in anomalous water chemistry.
 
 The second example is a significant reduction in maintenance costs
 for operators.  By alerting operators to potential
@@ -54,11 +54,11 @@ issues with the water chemistry before it reaches alarm levels,
 the organization can be much more flexible in scheduling service
 personnel. E.g., an operator can investigate the issue remotely,
 querying the controller for relevant information; the need for
-a dispatch to the physical site need not be an emergency, but can
+a dispatch to the physical site might not need to be an emergency, but can
 instead by folded into a more convenient schedule; and when the
 issue can be resolved in time, an alarm condition can be averted.
 
-The above to examples are cases where the data of interest is specific
+The above two examples are cases where the data of interest is specific
 to the bodies of water (and associated controllers) that are the
 responsibility of an individual organization.  Tossing our net
 even wider, by aggregating data from disparate organizations, it
@@ -77,7 +77,7 @@ reasonably be drawn.
 These control techniques might be simple things, such as parameter
 settings in the existing control algorithms, or they might be
 more involved, such as more sophisticated control algorithms
-(i.e., under what conditions time proportional control~\cite{McP13}
+(e.g., under what conditions time proportional control~\cite{McP13}
 is beneficial). The overall goal, however, is the same in each
 case. We want to improve water quality control by improved techniques
 driven by data analysis across multiple sites and organizations.
