--- a/conclude.tex
+++ b/conclude.tex
@@ -12,5 +12,6 @@ reduction in maintenance expenses.
 The promise, however, is potentially substantially more beneficial.  We will
 be able to use data from multiple installations to learn broad truths
 about water chemistry control that can be shared across the industry.
-This will result in lower chemical usage, fewer erroneous or alarm
-conditions, and overall better control over water chemistry.
+This will result in lower chemical usage, fewer alarm
+conditions or anomalous events,
+and overall better control over water chemistry.
