--- a/intro.tex
+++ b/intro.tex
@@ -61,7 +61,7 @@ change outweighs the costs of adoption (strongly impacted by
 the perceived ease of learning and ease of use)~\cite{Davis89}.
 From their inception, both EZConnect and EZAnalytics have been
 designed to be well matched to their users' experience
-(e.g., they are designed for those whose knowledge is in
+(i.e., they are designed for those whose knowledge is in
 water chemistry, not necessarily internet connectivity or data analysis).
 
 The paper is organized as follows. Section~\ref{sec:background}
