undergoing internal review

--- a/analytics.tex
+++ b/analytics.tex
@@ -90,3 +90,21 @@ The above can all be accomplished while preserving the confidentiality
 of the data associated with specific sites.  There are a number
 of robust techniques now available for sharing aggregate data
 while maintaining originators' anonymity~\cite{horey2007,zhong2009k}.
+
+A further benefit that will accrue from the EZAnalytics infrastructure
+is improved oversight of systems, both for regulatory purposes
+(e.g., health departments) and corporate purposes (e.g., institutional
+monitoring).
+While the data logs collected from individual controllers have the
+raw data needed for oversight purposes, it is rarely in the form
+(or presented at the conceptual level) that would be most beneficial
+to the overseer.
+By designing customized reporting for oversight purposes, the effort
+required on the part of individuals can be diminished,
+providing economic benefits to both the overseer and the overseen.
+
+In addition to a customized report, it is also possible to provide
+customized delivery.  E.g., a regulator would like to see the
+compliance report for a particular site, he/she sends an email to
+the BECSys Online server with the serial number (or other identifier)
+of the site, which responds with the requested report via return email.
