--- a/background.tex
+++ b/background.tex
@@ -27,7 +27,7 @@ so, and forwards vetted messages to/from the controller.
 
 \begin{figure}[htbp]
  \center
-\includegraphics[width=\columnwidth]{EZConnect}
+\includegraphics[width=0.9\columnwidth]{EZConnect}
     \caption{EZConnect system diagram~\protect\cite{ezconnect}. The controller
 opens a connection to the server in the cloud, which then facilitates communication with the controller by desktop programs or mobile apps.}
     \label{ezconnect}
