--- a/cloud.tex
+++ b/cloud.tex
@@ -43,7 +43,7 @@ on the same controller, all of which has historically been a manual,
 user-initiated operation.
 
 It is now possible to automatically
-collect this information from of a set of controllers (e.g., all
+collect this information from a set of controllers (e.g., all
 owned by an individual organization), retain the collected data in
 the cloud, and realize benefit from the aggregation that is not realized
 from each individual controller's data in isolation.
@@ -90,7 +90,10 @@ database.
 \begin{figure}[htbp]
  \center
 \includegraphics[width=\columnwidth]{EZAnalytics}
-    \caption{EZAnalytics infrastructure.}
+    \caption{EZAnalytics infrastructure. Each of the servers (and databases)
+are deployed
+in the cloud and can be replicated as needed to support increased capacity
+and/or fail-over reliability.}
     \label{online}
 \end{figure}
 
