conflict of interest statement included

--- a/paper.tex
+++ b/paper.tex
@@ -119,6 +119,8 @@ reduced maintenance costs, and higher quality water.
 \input{analytics}
 \input{conclude}
 
+\section*{Conflict of Interest Statement}
+On behalf of all authors, the corresponding author states that there is no conflict of interest.
 
 %\begin{acknowledgements}
 %If you'd like to thank anyone, place your comments here
